12587
You don't need Array to demonstrate the issue here:
```scala
scala> var b1 = 0.toByte; b1 ^= b1
<console>:13: error: type mismatch;
 found   : Int
 required: Byte
        b1 ^= b1
           ^
```

equivalent Java code compiles and the bytecode includes the necessary `i2b` instruction.
